// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context commitVariable normal 1`] = `
Object {
  "blockDependencies": Array [
    "d986e871-cb85-4bd5-b675-87307f60b882",
    "615d7f74-dc97-4aae-8690-b6cba1072a6a",
  ],
  "codeFragments": Array [
    Object {
      "code": "Block",
      "display": "Unknown",
      "errors": Array [],
      "hidden": false,
      "name": "#d986e871-cb85-4bd5-b675-87307f60b882",
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "Block",
    },
    Object {
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hidden": false,
      "name": ".",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "any",
    },
    Object {
      "code": "Variable",
      "display": "foo",
      "errors": Array [],
      "hidden": false,
      "name": "1588aedf-06e1-47f1-9282-d2ffe865974c",
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "number",
    },
    Object {
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hidden": false,
      "name": "+",
      "spaceAfter": true,
      "spaceBefore": true,
      "type": "number",
    },
    Object {
      "code": "Block",
      "display": "Unknown",
      "errors": Array [],
      "hidden": false,
      "name": "#615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "Block",
    },
    Object {
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hidden": false,
      "name": ".",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "any",
    },
    Object {
      "code": "Variable",
      "display": "bar",
      "errors": Array [],
      "hidden": false,
      "name": "475d9e73-e52a-42b3-8a95-477596812900",
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "spaceAfter": false,
      "spaceBefore": false,
      "type": "number",
    },
  ],
  "cst": Object {
    "children": Object {
      "Equal": Array [
        Object {
          "endColumn": 1,
          "endLine": 1,
          "endOffset": 0,
          "image": "=",
          "startColumn": 1,
          "startLine": 1,
          "startOffset": 0,
          "tokenType": Object {
            "CATEGORIES": Array [
              Object {
                "CATEGORIES": Array [],
                "PATTERN": /NOT_APPLICABLE/,
                "categoryMatches": Array [
                  17,
                  18,
                  20,
                  21,
                ],
                "categoryMatchesMap": Object {
                  "17": true,
                  "18": true,
                  "20": true,
                  "21": true,
                },
                "isParent": true,
                "name": "EqualCompareOperator",
                "tokenTypeIdx": 3,
              },
            ],
            "PATTERN": /=/,
            "categoryMatches": Array [],
            "categoryMatchesMap": Object {},
            "isParent": false,
            "name": "Equal",
            "tokenTypeIdx": 17,
          },
          "tokenTypeIdx": 17,
        },
      ],
      "expression": Array [
        Object {
          "children": Object {
            "lhs": Array [
              Object {
                "children": Object {
                  "lhs": Array [
                    Object {
                      "children": Object {
                        "rhs": Array [
                          Object {
                            "children": Object {
                              "lhs": Array [
                                Object {
                                  "children": Object {
                                    "lhs": Array [
                                      Object {
                                        "children": Object {
                                          "lhs": Array [
                                            Object {
                                              "children": Object {
                                                "lhs": Array [
                                                  Object {
                                                    "children": Object {
                                                      "AdditionOperator": Array [
                                                        Object {
                                                          "endColumn": 77,
                                                          "endLine": 1,
                                                          "endOffset": 76,
                                                          "image": "+",
                                                          "startColumn": 77,
                                                          "startLine": 1,
                                                          "startOffset": 76,
                                                          "tokenType": Object {
                                                            "CATEGORIES": Array [
                                                              Object {
                                                                "CATEGORIES": Array [],
                                                                "PATTERN": /NOT_APPLICABLE/,
                                                                "categoryMatches": Array [
                                                                  24,
                                                                  33,
                                                                ],
                                                                "categoryMatchesMap": Object {
                                                                  "24": true,
                                                                  "33": true,
                                                                },
                                                                "isParent": true,
                                                                "name": "AdditionOperator",
                                                                "tokenTypeIdx": 5,
                                                              },
                                                            ],
                                                            "PATTERN": /\\\\\\+/,
                                                            "categoryMatches": Array [],
                                                            "categoryMatchesMap": Object {},
                                                            "isParent": false,
                                                            "name": "Plus",
                                                            "tokenTypeIdx": 24,
                                                          },
                                                          "tokenTypeIdx": 24,
                                                        },
                                                      ],
                                                      "lhs": Array [
                                                        Object {
                                                          "children": Object {
                                                            "lhs": Array [
                                                              Object {
                                                                "children": Object {
                                                                  "Dot": Array [
                                                                    Object {
                                                                      "endColumn": 39,
                                                                      "endLine": 1,
                                                                      "endOffset": 38,
                                                                      "image": ".",
                                                                      "startColumn": 39,
                                                                      "startLine": 1,
                                                                      "startOffset": 38,
                                                                      "tokenType": Object {
                                                                        "CATEGORIES": Array [],
                                                                        "PATTERN": /\\\\\\./,
                                                                        "categoryMatches": Array [],
                                                                        "categoryMatchesMap": Object {},
                                                                        "isParent": false,
                                                                        "name": "Dot",
                                                                        "tokenTypeIdx": 31,
                                                                      },
                                                                      "tokenTypeIdx": 31,
                                                                    },
                                                                  ],
                                                                  "lhs": Array [
                                                                    Object {
                                                                      "children": Object {
                                                                        "blockExpression": Array [
                                                                          Object {
                                                                            "children": Object {
                                                                              "Sharp": Array [
                                                                                Object {
                                                                                  "endColumn": 2,
                                                                                  "endLine": 1,
                                                                                  "endOffset": 1,
                                                                                  "image": "#",
                                                                                  "startColumn": 2,
                                                                                  "startLine": 1,
                                                                                  "startOffset": 1,
                                                                                  "tokenType": Object {
                                                                                    "CATEGORIES": Array [],
                                                                                    "PATTERN": /#/,
                                                                                    "categoryMatches": Array [],
                                                                                    "categoryMatchesMap": Object {},
                                                                                    "isParent": false,
                                                                                    "name": "Sharp",
                                                                                    "tokenTypeIdx": 30,
                                                                                  },
                                                                                  "tokenTypeIdx": 30,
                                                                                },
                                                                              ],
                                                                              "UUID": Array [
                                                                                Object {
                                                                                  "endColumn": 38,
                                                                                  "endLine": 1,
                                                                                  "endOffset": 37,
                                                                                  "image": "d986e871-cb85-4bd5-b675-87307f60b882",
                                                                                  "startColumn": 3,
                                                                                  "startLine": 1,
                                                                                  "startOffset": 2,
                                                                                  "tokenType": Object {
                                                                                    "CATEGORIES": Array [],
                                                                                    "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                                    "categoryMatches": Array [],
                                                                                    "categoryMatchesMap": Object {},
                                                                                    "isParent": false,
                                                                                    "name": "UUID",
                                                                                    "tokenTypeIdx": 32,
                                                                                  },
                                                                                  "tokenTypeIdx": 32,
                                                                                },
                                                                              ],
                                                                            },
                                                                            "name": "blockExpression",
                                                                          },
                                                                        ],
                                                                      },
                                                                      "name": "atomicExpression",
                                                                    },
                                                                  ],
                                                                  "rhs": Array [
                                                                    Object {
                                                                      "endColumn": 75,
                                                                      "endLine": 1,
                                                                      "endOffset": 74,
                                                                      "image": "1588aedf-06e1-47f1-9282-d2ffe865974c",
                                                                      "startColumn": 40,
                                                                      "startLine": 1,
                                                                      "startOffset": 39,
                                                                      "tokenType": Object {
                                                                        "CATEGORIES": Array [],
                                                                        "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                        "categoryMatches": Array [],
                                                                        "categoryMatchesMap": Object {},
                                                                        "isParent": false,
                                                                        "name": "UUID",
                                                                        "tokenTypeIdx": 32,
                                                                      },
                                                                      "tokenTypeIdx": 32,
                                                                    },
                                                                  ],
                                                                },
                                                                "name": "chainExpression",
                                                              },
                                                            ],
                                                          },
                                                          "name": "multiplicationExpression",
                                                        },
                                                      ],
                                                      "rhs": Array [
                                                        Object {
                                                          "children": Object {
                                                            "lhs": Array [
                                                              Object {
                                                                "children": Object {
                                                                  "Dot": Array [
                                                                    Object {
                                                                      "endColumn": 116,
                                                                      "endLine": 1,
                                                                      "endOffset": 115,
                                                                      "image": ".",
                                                                      "startColumn": 116,
                                                                      "startLine": 1,
                                                                      "startOffset": 115,
                                                                      "tokenType": Object {
                                                                        "CATEGORIES": Array [],
                                                                        "PATTERN": /\\\\\\./,
                                                                        "categoryMatches": Array [],
                                                                        "categoryMatchesMap": Object {},
                                                                        "isParent": false,
                                                                        "name": "Dot",
                                                                        "tokenTypeIdx": 31,
                                                                      },
                                                                      "tokenTypeIdx": 31,
                                                                    },
                                                                  ],
                                                                  "lhs": Array [
                                                                    Object {
                                                                      "children": Object {
                                                                        "blockExpression": Array [
                                                                          Object {
                                                                            "children": Object {
                                                                              "Sharp": Array [
                                                                                Object {
                                                                                  "endColumn": 79,
                                                                                  "endLine": 1,
                                                                                  "endOffset": 78,
                                                                                  "image": "#",
                                                                                  "startColumn": 79,
                                                                                  "startLine": 1,
                                                                                  "startOffset": 78,
                                                                                  "tokenType": Object {
                                                                                    "CATEGORIES": Array [],
                                                                                    "PATTERN": /#/,
                                                                                    "categoryMatches": Array [],
                                                                                    "categoryMatchesMap": Object {},
                                                                                    "isParent": false,
                                                                                    "name": "Sharp",
                                                                                    "tokenTypeIdx": 30,
                                                                                  },
                                                                                  "tokenTypeIdx": 30,
                                                                                },
                                                                              ],
                                                                              "UUID": Array [
                                                                                Object {
                                                                                  "endColumn": 115,
                                                                                  "endLine": 1,
                                                                                  "endOffset": 114,
                                                                                  "image": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
                                                                                  "startColumn": 80,
                                                                                  "startLine": 1,
                                                                                  "startOffset": 79,
                                                                                  "tokenType": Object {
                                                                                    "CATEGORIES": Array [],
                                                                                    "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                                    "categoryMatches": Array [],
                                                                                    "categoryMatchesMap": Object {},
                                                                                    "isParent": false,
                                                                                    "name": "UUID",
                                                                                    "tokenTypeIdx": 32,
                                                                                  },
                                                                                  "tokenTypeIdx": 32,
                                                                                },
                                                                              ],
                                                                            },
                                                                            "name": "blockExpression",
                                                                          },
                                                                        ],
                                                                      },
                                                                      "name": "atomicExpression",
                                                                    },
                                                                  ],
                                                                  "rhs": Array [
                                                                    Object {
                                                                      "endColumn": 152,
                                                                      "endLine": 1,
                                                                      "endOffset": 151,
                                                                      "image": "475d9e73-e52a-42b3-8a95-477596812900",
                                                                      "startColumn": 117,
                                                                      "startLine": 1,
                                                                      "startOffset": 116,
                                                                      "tokenType": Object {
                                                                        "CATEGORIES": Array [],
                                                                        "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                        "categoryMatches": Array [],
                                                                        "categoryMatchesMap": Object {},
                                                                        "isParent": false,
                                                                        "name": "UUID",
                                                                        "tokenTypeIdx": 32,
                                                                      },
                                                                      "tokenTypeIdx": 32,
                                                                    },
                                                                  ],
                                                                },
                                                                "name": "chainExpression",
                                                              },
                                                            ],
                                                          },
                                                          "name": "multiplicationExpression",
                                                        },
                                                      ],
                                                    },
                                                    "name": "additionExpression",
                                                  },
                                                ],
                                              },
                                              "name": "concatExpression",
                                            },
                                          ],
                                        },
                                        "name": "inExpression",
                                      },
                                    ],
                                  },
                                  "name": "compareExpression",
                                },
                              ],
                            },
                            "name": "equalCompareExpression",
                          },
                        ],
                      },
                      "name": "notExpression",
                    },
                  ],
                },
                "name": "combineExpression",
              },
            ],
          },
          "name": "expression",
        },
      ],
    },
    "name": "startExpression",
  },
  "definition": "=#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c + #615d7f74-dc97-4aae-8690-b6cba1072a6a.475d9e73-e52a-42b3-8a95-477596812900",
  "dirty": false,
  "flattenVariableDependencies": Array [
    Object {
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
    },
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
  "functionDependencies": Array [],
  "kind": "expression",
  "level": 2,
  "name": "baz",
  "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
  "valid": true,
  "variableDependencies": Array [
    Object {
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
    },
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
  "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
  "variableValue": Object {
    "cacheValue": Object {
      "result": 366,
      "type": "number",
    },
    "result": Object {
      "result": 366,
      "type": "number",
    },
    "success": true,
    "updatedAt": null,
  },
  "version": 0,
  "view": Object {},
}
`;

exports[`Context commitVariable normal 2`] = `
Object {
  "ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context commitVariable normal 3`] = `
Object {
  "#615d7f74-dc97-4aae-8690-b6cba1072a6a.475d9e73-e52a-42b3-8a95-477596812900": Array [
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
}
`;

exports[`Context findVariable 1`] = `
Object {
  "foo": Array [
    Array [],
    Array [],
  ],
}
`;

exports[`Context findVariable 2`] = `
Object {
  "bar": Array [
    Array [
      Object {
        "acceptError": false,
        "args": Array [
          Object {
            "name": "number",
            "type": "number",
          },
        ],
        "async": false,
        "chain": false,
        "description": "Returns the absolute value of a number.",
        "effect": false,
        "examples": Array [
          Object {
            "codeFragments": Array [
              Object {
                "code": "Function",
                "display": "ABS",
                "errors": Array [],
                "hidden": false,
                "name": "ABS",
                "spaceAfter": false,
                "spaceBefore": false,
                "type": "any",
              },
              Object {
                "code": "LParen",
                "display": "(",
                "errors": Array [],
                "hidden": false,
                "name": "(",
                "spaceAfter": true,
                "spaceBefore": false,
                "type": "any",
              },
              Object {
                "code": "Minus",
                "display": "-",
                "errors": Array [],
                "hidden": false,
                "name": "-",
                "spaceAfter": false,
                "spaceBefore": true,
                "type": "any",
              },
              Object {
                "code": "NumberLiteral",
                "display": "1",
                "errors": Array [],
                "hidden": false,
                "name": "1",
                "spaceAfter": false,
                "spaceBefore": false,
                "type": "number",
              },
              Object {
                "code": "RParen",
                "display": ")",
                "errors": Array [],
                "hidden": false,
                "name": ")",
                "spaceAfter": false,
                "spaceBefore": true,
                "type": "number",
              },
            ],
            "input": "=ABS(-1)",
            "output": Object {
              "result": 1,
              "type": "number",
            },
          },
        ],
        "group": "core",
        "key": "ABS",
        "lazy": false,
        "name": "ABS",
        "pure": true,
        "reference": [Function],
        "returns": "number",
        "testCases": Array [
          Object {
            "input": Array [
              -1,
            ],
            "output": 1,
          },
        ],
      },
    ],
    Array [
      Object {
        "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
        "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
      },
    ],
  ],
}
`;

exports[`Context removeVariable 1`] = `
Array [
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c",
]
`;

exports[`Context removeVariable 2`] = `
Object {
  "ABS": Array [],
}
`;

exports[`Context removeVariable 3`] = `
Object {
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [],
}
`;

exports[`Context reset 1`] = `
Array [
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c",
  "#615d7f74-dc97-4aae-8690-b6cba1072a6a.475d9e73-e52a-42b3-8a95-477596812900",
]
`;

exports[`Context reset 2`] = `
Object {
  "ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context reset 3`] = `
Object {
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;
